.provarCaches/00D5f000005vwGkEAI/objects/rstk__soshipsrl__c.object
<CustomObject>
    <description>soshipsrl__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soshipsrl_soshipdmd__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  IF(ISBLANK(rstk__soshipsrl_srlno__c), rstk__soshipsrl_seq__c, rstk__soshipsrl_srlno__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soshipsrl_soshipdmd__r.rstk__soshipdmd_line__r.Name &amp; &apos;_&apos; &amp;  rstk__soshipsrl_srlno__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__soshipsrl_soshipdmd__r.rstk__soshipdmd_compitem__r.Name &amp; &apos;_&apos; &amp;  rstk__soshipsrl_srlno__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_autonumbered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that the Serial Number of the Product shipped was Auto-generated at time of shipment.</inlineHelpText>
        <label>Auto Numbered Serial No.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_comments__c</fullName>
        <description>User-specified comments (ongoing product tracking etc.). (DD)</description>
        <inlineHelpText>Comments related to this Shipped Serial record.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_custno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer to whom the unit was sold. (DD)</description>
        <inlineHelpText>Customer Number of the Customer that this Product was sold to, which may differ from the Customer the Product was shipped to.</inlineHelpText>
        <label>Sold to Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Shipped Product Serial Details (Sold to Customer)</relationshipLabel>
        <relationshipName>custnososhipsrls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_dateship__c</fullName>
        <description>The date of the shipment (system assigned). (DD)</description>
        <inlineHelpText>The date that the Shipper was shipped in the system.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_eucustno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer by whom the unit was used or consumed.  This may or may not be the same as the sold-to customer as the purchaser may have been a retailer or the unit may have been gifted. (DD)</description>
        <inlineHelpText>Customer Number of Customer that this Product was shipped to, which may differ from the Customer the Product was sold to.</inlineHelpText>
        <label>End User Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Shipped Product Serial Details (End User Customer)</relationshipLabel>
        <relationshipName>eucustnososhipsrls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_icitemsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory By Serial Number</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipLabel>Shipped Product Serial Details</relationshipLabel>
        <relationshipName>Shipped_Product_Serial_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_price__c</fullName>
        <description>The price charged for the unit from the sales invoice. (DD)</description>
        <inlineHelpText>Price of the Product shipped</inlineHelpText>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_prod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product number that was sold and is being tracked. (DD)</description>
        <inlineHelpText>Product Number shipped</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Shipped Product Serial Details</relationshipLabel>
        <relationshipName>soshipsrls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_refserial__c</fullName>
        <description>Alternate or reference serial number associated with this unit (user-specified). (DD)</description>
        <inlineHelpText>Reference serial number</inlineHelpText>
        <label>Reference S/N</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_seq__c</fullName>
        <inlineHelpText>Sequence number</inlineHelpText>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_shipdate__c</fullName>
        <formula>rstk__soshipsrl_soshipdmd__r.rstk__soshipdmd_line__r.rstk__soshipline_dateship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that the Product that this serial record represents has shipped.</inlineHelpText>
        <label>Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_soshipdmd__c</fullName>
        <inlineHelpText>A link to the Shipper Demand associated with this serial record.</inlineHelpText>
        <label>Shipper Demand</label>
        <referenceTo>rstk__soshipdmd__c</referenceTo>
        <relationshipLabel>Shipped Product Serial Details</relationshipLabel>
        <relationshipName>soshipsrls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_srlno__c</fullName>
        <inlineHelpText>Serial number of the Product shipped</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrl_srlnoidx__c</fullName>
        <externalId>true</externalId>
        <label>Indexed Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shipped Product Serial Detail</label>
    <listViews>
        <fullName>rstk__ALL2</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_SO_Ship_Serial</fullName>
        <columns>NAME</columns>
        <columns>rstk__soshipsrl_custno__c</columns>
        <columns>rstk__soshipsrl_soshipdmd__c</columns>
        <columns>rstk__soshipsrl_prod__c</columns>
        <columns>rstk__soshipsrl_srlno__c</columns>
        <columns>rstk__soshipsrl_dateship__c</columns>
        <columns>rstk__soshipsrl_price__c</columns>
        <columns>rstk__soshipsrl_shipped__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>SO Ship Serial</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipped Product Serial Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>